<resources>
    <string name="app_name">xMec</string>
    <string name="default_notification_channel_id" translatable="false">fcm_default_channel</string>
    <string name="FACEBOOK_APP_ID">1851247128486694</string>
    <string name="ACCOUNT_KIT_CLIENT_TOKEN">81a1002ad50275fa6ddf658fa6a0755f</string>
    <string name="title_activity_mbr">Y bạ</string>
    <string name="title_activity_mbr_create">Tạo y bạ</string>
    <string name="title_activity_mbr_update">Cập nhật y bạ</string>
    <string name="title_activity_hr_create">Tạo sổ khám bệnh</string>
    <string name="title_activity_hr_add_drug">Thêm thuốc</string>
    <string name="title_activity_hr_list_drug">Thêm thuốc</string>
    <string name="title_activity_detail_news">DetailNewsActivity</string>
    <string name="title_activity_account">Quản lý tài khoản</string>
    <string name="layout_disagree">Hủy bỏ</string>
    <string name="layout_agree">Đồng ý</string>
    <string name="layout_ok">OK</string>
    <string name="layout_please_wait">Vui lòng chờ</string>
    <string name="layout_empty">Không có dữ liệu</string>
    <string name="layout_not_update">Chưa cập nhật</string>
    <string name="layout_updating">Đang cập nhật</string>
    <string name="shared_with">Đã chia sẻ với:</string>
    <string name="shared_from">Chia sẻ từ:</string>
    <string name="shared_title">ĐÃ CHIA SẺ</string>
    <string name="shared_time_title">THỜI ĐIỂM CHIA SẺ</string>
    <string name="shared_time_content">Thời điểm chia sẻ</string>
    <string name="layout_shared">Đã chia sẻ</string>
    <string name="layout_be_shared">Được chia sẻ</string>
    <string name="layout_pass_title">ĐỔI LẠI MẬT KHẨU</string>
    <string name="layout_pass_old">Nhập mật khẩu cũ</string>
    <string name="layout_pass_new">Nhập mật khẩu mới</string>
    <string name="layout_pass_again">Nhập lại mật khẩu mới</string>
    <string name="layout_pass_change">Đổi</string>
    <string name="layout_account_username">Họ và tên</string>
    <string name="layout_account_phonenumber">Số điện thoại</string>
    <string name="layout_account_change_pass">Đổi mật khẩu</string>
    <string name="layout_sv_login_by_phone">Đăng nhập bằng số điện thoại</string>
    <string name="layout_sv_title_1">QUẢN LÝ Y BẠ THÔNG MINH</string>
    <string name="layout_sv_title_2">LIÊN KẾT VÀ CHIA SẺ</string>
    <string name="layout_sv_title_3">LỘ TRÌNH ĐIỀU TRỊ</string>
    <string name="layout_sv_title_4">TRA CỨU BỆNH, THUỐC NHANH CHÓNG</string>
    <string name="layout_sv_title_5">LỊCH NHẮC NHỞ UỐNG TIỆN LỢI</string>
    <string name="layout_sv_content_1">Cung cấp đầy đủ thông tin y bạ cho người dùng
        liên kết các tài khoản tiện lợi</string>
    <string name="layout_sv_content_2">Cung cấp đầy đủ thông tin y bạ cho người dùng
        liên kết các tài khoản tiện lợi</string>
    <string name="layout_sv_content_3">Cung cấp đầy đủ thông tin y bạ cho người dùng
        liên kết các tài khoản tiện lợi</string>
    <string name="layout_sv_content_4">Cung cấp đầy đủ thông tin tra cứu bệnh,
        thuốc nhanh chính xác</string>
    <string name="layout_sv_content_5">Lịch uống thuốc tiện lợi
        giúp bạn không quên mất giờ uống thuốc của mình</string>
    <string name="layout_lg_login">Đăng nhập</string>
    <string name="layout_lg_register">Đăng ký</string>
    <string name="layout_lg_forgot_pass">Quên mật khẩu?</string>
    <string name="layout_lg_phone">Số điện thoại</string>
    <string name="layout_lg_password">Nhập mật khẩu</string>
    <string name="layout_rg_name">Họ tên</string>
    <string name="layout_rg_phone">Số điện thoại</string>
    <string name="layout_rg_password">Mật khẩu</string>
    <string name="layout_rg_password_again">Nhập lại mật khẩu</string>
    <string name="layout_rg_register">Đăng ký</string>
    <string name="layout_mbr_view_only">Chỉ xem</string>
    <string name="layout_mbr_view_and_edit">Xem và sửa</string>
    <string name="layout_mbr_create_add">Thêm y bạ</string>
    <string name="layout_mbr_create_name">Họ và tên</string>
    <string name="layout_mbr_create_gender">Giới tính</string>
    <string name="layout_mbr_create_date">Ngày sinh</string>
    <string name="layout_mbr_create_relationship">Quan hệ</string>
    <string name="layout_mbr_create_link">Tài khoản liên kết</string>
    <string name="layout_mbr_create">Tạo y bạ</string>
    <string name="layout_mbr_update">Cập nhật y bạ</string>
    <string name="layout_mbr_delete">Xóa y bạ</string>
    <string name="layout_sf_link_title">LIÊN KẾT</string>
    <string name="layout_sf_link">Liên kết</string>
    <string name="layout_sf_search">Tìm kiếm</string>
    <string name="layout_sf_search_by_phone">Tìm kiếm bằng số điện thoại</string>
    <string name="layout_sf_view_only">Chỉ xem</string>
    <string name="layout_sf_view_and_edt">Xem và sửa</string>
    <string name="layout_sf_delete">Xóa</string>
    <string name="layout_sf_cancel">Hủy</string>
    <string name="layout_sf_close">Đóng</string>
    <string name="layout_mbr_item_link">Liên kết:</string>
    <string name="layout_mbr_item_share">Đã chia sẻ:</string>
    <string name="layout_mbr_item_create_by">Tạo bởi:</string>
    <string name="layout_mbr_item_health_records">Danh sách sổ điều trị</string>
    <string name="layout_hr_start">Bắt đầu:</string>
    <string name="layout_hr_end">Kết thúc:</string>
    <string name="layout_hr_disease">Tên bệnh:</string>
    <string name="layout_hr_list_empty">Danh sách trống</string>
    <string name="layout_hr_push">(nhấn</string>
    <string name="layout_hr_to_add">để thêm danh sách)</string>
    <string name="layout_hr_continue_trearment">Tiếp tục đợt điều trị</string>
    <string name="layout_hr_end_trearment">Kết thúc đợt điều trị</string>
    <string name="layout_hr_edit">Sửa</string>
    <string name="layout_hr_delete">Xóa</string>
    <string name="layout_hr_create_hr_name">Tên sổ khám</string>
    <string name="layout_hr_create_sick_name">Tên bệnh</string>
    <string name="layout_hr_create_start_date">Ngày bắt đầu</string>
    <string name="layout_hr_create_note">Ghi chú</string>
    <string name="layout_hr_create_hospital">Cơ sở y tế</string>
    <string name="layout_hr_create_doctor_name">Bác sĩ</string>
    <string name="layout_hr_create_collapse">Thu gọn</string>
    <string name="layout_hr_create_expand">Mở rộng</string>
    <string name="layout_hr_create_continue">Tiếp tục</string>
    <string name="layout_disease_name">Tên bệnh</string>
    <string name="layout_disease_add_disease">THÊM BỆNH</string>
    <string name="layout_disease_cancel">Hủy</string>
    <string name="layout_disease_add">Thêm</string>
    <string name="layout_hr_add_drug_note">Ghi chú:</string>
    <string name="layout_hr_ad_list_drug">Danh sách thuốc</string>
    <string name="layout_hr_ad_add_drug">THÊM THUỐC</string>
    <string name="layout_create_drug">THÊM THUỐC</string>
    <string name="layout_create_drug_name">Tên thuốc</string>
    <string name="layout_create_drug_note">Ghi chú</string>
    <string name="layout_update_drug">SỬA</string>
    <string name="layout_update_drug_update">Cập nhật</string>
    <string name="layout_search_drug">Tìm kiếm thuốc</string>
    <string name="layout_search_drug_best">Thuốc được tìm kiếm nhiều nhất </string>
    <string name="layout_searched_drug">Thuốc được tìm kiếm </string>
    <string name="layout_search_best">Bệnh được tìm kiếm nhiều nhất</string>
    <string name="layout_ohr_image">Hình ảnh</string>
    <string name="layout_search_drug_edt">Nhập thuốc bạn cần tìm</string>
    <string name="layout_search_disease_edt">Nhập bệnh bạn cần tìm</string>
    <string name="layout_search_drug_title">Tìm kiếm thuốc</string>
    <string name="layout_search_disease_title">Tìm kiếm bệnh</string>
    <string name="layout_alarm_schedule">THÔNG BÁO LỊCH UỐNG THUỐC</string>
    <string name="layout_alarm_repeat">NHẮC LẠI</string>
    <string name="layout_alarm_name">Tên lịch nhắc</string>
    <string name="layout_alarm_time">Thời gian</string>
    <string name="layout_alarm_minute">phút</string>
    <string name="layout_alarm_5_minute">5 phút</string>
    <string name="layout_alarm_10_minute">10 phút</string>
    <string name="layout_alarm_15_minute">15 phút</string>
    <string name="layout_alarm_brn_repeat">Nhắc lại</string>
    <string name="layout_alarm_brn_detail">Chi tiết</string>
    <string name="layout_alarm_brn_close">Đóng</string>
    <string name="layout_alarm_brn_cancel">Hủy</string>
    <string name="layout_alarm_brn_done">Xong</string>
    <string name="menu_navigation_mbr">Y bạ</string>
    <string name="menu_navigation_infomation">Tin tức</string>
    <string name="menu_navigation_searching_sick">Tra cứu bệnh</string>
    <string name="menu_navigation_searching_medicine">Tra cứu thuốc</string>
    <string name="menu_navigation_medical_facility">Tìm kiếm cơ sở y tế</string>
    <string name="menu_navigation_share">Chia sẻ và tư vấn</string>
    <string name="menu_navigation_setting">Cài đặt</string>
    <string name="menu_navigation_logout">Đăng xuất</string>
    <string name="menu_home_share">Chia sẻ</string>
    <string name="menu_home_notify">Thông báo</string>
    <string name="menu_resize_image_rota">Xoa phải</string>
    <string name="menu_resize_done">Chọn</string>
    <string name="menu_hr_add_drug_done">Hoàn thành</string>
    <string name="menu_hr_add_drug_skip">Bỏ qua</string>
    <string name="menu_hr_edit">Sửa</string>
    <string name="menu_schedule_continue">Tiếp</string>
    <string name="menu_schedule_save">Lưu</string>
    <string name="menu_mbr_delete">Xóa</string>
    <string name="dialog_noti">THÔNG BÁO</string>
    <string name="dialog_lg_change_password">ĐỔI MẬT KHẨU</string>
    <string name="dialog_lg_input_phone">Nhập số điện thoại</string>
    <string name="dialog_lg_cancel">Hủy</string>
    <string name="dialog_lg_continue">Tiếp tục</string>
    <string name="dialog_lg_input_new_pasword">Nhập mật khẩu mới</string>
    <string name="dialog_lg_done">Xong</string>
    <string name="message_noti">Thông báo</string>
    <string name="message_back_press_to_exit">Nhấn back lần nữa để thoát app</string>
    <string name="message_can_not_request">Không thể kết nối tới Server</string>
    <string name="message_select_picture">Chọn ảnh</string>
    <string name="message_not_allow_permission">Một số tính năng sẽ không thể thực hiện do bạn chưa cấp quyền</string>
    <string name="message_need_allow_permission">Ứng dụng sẽ gợi ý số điện thoại mà bạn tìm kiếm. Vui lòng cấp quyền trong cài đặt hệ thống để sử dụng tính năng này!</string>
    <string name="message_overlays">Để ứng dụng có thể nhắc nhở bạn một cách hiệu quả nhất, vui lòng cho phép ứng dụng hiển thị lên trên các ứng dụng khác</string>
    <string name="message_not_perrmission_to_use">Bạn không có quyền sử dụng chức năng này</string>
    <string name="message_shared_delete">Bạn muốn xóa chia sẻ này?</string>
    <string name="message_lg_active">Tài khoản của bạn chưa được kích hoạt, bạn có muốn kích hoạt tài khoản?</string>
    <string name="message_ca_error_link_try_again">Liên kết tài khoản y bạ không thành công. Bạn có muốn thử lại?</string>
    <string name="message_mbr_delete">Bạn muốn xóa y bạ này?</string>
    <string name="message_mbr_delete_hr">Bạn muốn xóa sổ khám bệnh này?</string>
    <string name="message_hr_create_error_diseae">Cập nhật tên bệnh không thành công, bạn có muốn thử lại?</string>
    <string name="message_hr_create_error_image">Cập nhật ảnh không thành công, bạn có muốn thử lại?</string>
    <string name="message_create_drug_error_image">Cập nhật ảnh không thành công, bạn có muốn thử lại?</string>
    <string name="message_add_drug_delete_drug">Bạn chắc chắn muốn xóa thuốc này?</string>
    <string name="setting">Cài đặt</string>
    <string name="cancel">Hủy bỏ</string>
    <string name="ok">Đồng ý</string>
    <string name="doing_update">Đang cập nhật…</string>
    <string name="doing_do">Đang thực hiện…</string>
</resources>