<?xml version="1.0" encoding="utf-8"?>
<ScrollView xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:fillViewport="true">

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:focusableInTouchMode="true"
        android:orientation="vertical">

        <android.support.design.widget.TextInputLayout
            style="@style/TextInputLayout.Login"
            android:layout_width="match_parent"
            android:layout_height="wrap_content">

            <android.support.design.widget.TextInputEditText
                android:id="@+id/edt_phone"
                style="@style/EditText.Login"
                android:drawableLeft="@mipmap/ic_phone_blue_24"
                android:drawableStart="@mipmap/ic_phone_blue_24"
                android:hint="@string/layout_lg_phone"
                android:inputType="phone" />

            <View style="@style/View.Horizontal.Blue" />
        </android.support.design.widget.TextInputLayout>

        <android.support.design.widget.TextInputLayout
            style="@style/TextInputLayout.Login"
            android:layout_width="match_parent"
            android:layout_height="wrap_content">

            <android.support.design.widget.TextInputEditText
                android:id="@+id/edt_password"
                style="@style/EditText.Login"
                android:drawableLeft="@mipmap/ic_passwork_blue_24"
                android:drawableStart="@mipmap/ic_passwork_blue_24"
                android:hint="@string/layout_lg_password"
                android:inputType="textPassword" />

            <View style="@style/View.Horizontal.Blue" />
        </android.support.design.widget.TextInputLayout>

        <Button
            android:id="@+id/btn_login"
            style="@style/Button.white.Login"
            android:layout_marginBottom="@dimen/size_16"
            android:text="@string/layout_lg_login" />

        <View
            android:layout_width="@dimen/size_0"
            android:layout_height="0dp"
            android:layout_weight="1" />

        <Button
            android:id="@+id/btn_forgot_pass"
            style="@style/Button.blue"
            android:layout_gravity="center_horizontal"
            android:layout_margin="@dimen/size_24"
            android:background="?android:attr/selectableItemBackground"
            android:text="@string/layout_lg_forgot_pass" />
    </LinearLayout>
</ScrollView>