<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:id="@+id/rootView"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="?android:attr/selectableItemBackground"
    android:clickable="true"
    android:focusable="true"
    android:gravity="center"
    android:orientation="vertical">

    <TextView
        android:id="@+id/txt_title"
        style="@style/TextVIew.black.16"
        android:gravity="center"
        android:text="@string/layout_hr_list_empty" />

    <LinearLayout
        android:id="@+id/layout_1"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_margin="@dimen/size_8"
        android:gravity="center"
        android:orientation="horizontal">

        <TextView
            style="@style/TextVIew.black.16"
            android:layout_width="wrap_content"
            android:gravity="center"
            android:text="@string/layout_hr_push" />

        <ImageView
            android:layout_width="@dimen/size_24"
            android:layout_height="@dimen/size_24"
            android:layout_margin="6dp"
            android:background="@drawable/layout_round_green"
            android:src="@drawable/ic_add_white_36dp" />

        <TextView
            android:id="@+id/txt_message"
            style="@style/TextVIew.black.16"
            android:layout_width="wrap_content"
            android:gravity="center"
            android:text="@string/layout_hr_to_add" />
    </LinearLayout>
</LinearLayout>