<?xml version="1.0" encoding="utf-8"?>
<ScrollView xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:fillViewport="true">

    <LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:focusableInTouchMode="true"
        android:orientation="vertical">

        <android.support.design.widget.TextInputLayout
            style="@style/TextInputLayout.Login"
            android:layout_width="match_parent"
            android:layout_height="wrap_content">

            <android.support.design.widget.TextInputEditText
                android:id="@+id/edt_name"
                style="@style/EditText.Login"
                android:drawableLeft="@mipmap/ic_user_blue_24"
                android:drawableStart="@mipmap/ic_user_blue_24"
                android:hint="@string/layout_rg_name"
                android:inputType="textCapWords" />

            <View style="@style/View.Horizontal.Blue" />
        </android.support.design.widget.TextInputLayout>

        <android.support.design.widget.TextInputLayout
            style="@style/TextInputLayout.Login"
            android:layout_width="match_parent"
            android:layout_height="wrap_content">

            <android.support.design.widget.TextInputEditText
                android:id="@+id/edt_phone"
                style="@style/EditText.Login"
                android:drawableLeft="@mipmap/ic_phone_blue_24"
                android:drawableStart="@mipmap/ic_phone_blue_24"
                android:hint="@string/layout_rg_phone"
                android:inputType="phone" />

            <View style="@style/View.Horizontal.Blue" />
        </android.support.design.widget.TextInputLayout>

        <android.support.design.widget.TextInputLayout
            style="@style/TextInputLayout.Login"
            android:layout_width="match_parent"
            android:layout_height="wrap_content">

            <android.support.design.widget.TextInputEditText
                android:id="@+id/edt_password"
                style="@style/EditText.Login"
                android:drawableLeft="@mipmap/ic_passwork_blue_24"
                android:drawableStart="@mipmap/ic_passwork_blue_24"
                android:hint="@string/layout_rg_password"
                android:inputType="textPassword" />

            <View style="@style/View.Horizontal.Blue" />
        </android.support.design.widget.TextInputLayout>

        <android.support.design.widget.TextInputLayout
            style="@style/TextInputLayout.Login"
            android:layout_width="match_parent"
            android:layout_height="wrap_content">

            <android.support.design.widget.TextInputEditText
                android:id="@+id/edt_passwork_again"
                style="@style/EditText.Login"
                android:drawableLeft="@mipmap/ic_passwork_blue_24"
                android:drawableStart="@mipmap/ic_passwork_blue_24"
                android:hint="@string/layout_rg_password_again"
                android:inputType="textPassword" />

            <View style="@style/View.Horizontal.Blue" />
        </android.support.design.widget.TextInputLayout>

        <Button
            android:id="@+id/btn_login"
            style="@style/Button.white.Login"
            android:layout_marginBottom="@dimen/size_16"
            android:text="@string/layout_rg_register" />
    </LinearLayout>
</ScrollView>